test_regress/t/t_fsmmulti_combo_multi_warn_bad.out
%Warning-FSMMULTI: t/t_fsmmulti_combo_multi_warn_bad.v:30:5: FSM coverage: multiple supported transition candidates found in the same combinational always block. Only the first candidate will be instrumented.
   30 |     case (state_b_q)
      |     ^~~~
                   t/t_fsmmulti_combo_multi_warn_bad.v:26:5: ... Location of first supported candidate for 't.same_u.state_a_q'
   26 |     case (state_a_q)
      |     ^~~~
                   ... For warning description see https://verilator.org/warn/FSMMULTI?v=latest
                   ... Use "/* verilator lint_off FSMMULTI */" and lint_on around source to disable this message.
%Warning-FSMMULTI: t/t_fsmmulti_combo_multi_warn_bad.v:66:5: FSM coverage: multiple supported transition candidates found for the same FSM in combinational always blocks. Only the first candidate will be instrumented.
   66 |     case (state_q)
      |     ^~~~
                   t/t_fsmmulti_combo_multi_warn_bad.v:58:5: ... Location of first supported candidate for 't.split_u.state_q'
   58 |     case (state_q)
      |     ^~~~
%Error: Exiting due to
